--- a/style.css
+++ b/style.css
@@ -1,12 +1,8 @@
 h1 {
-    color: gray;
+    color: black;
     text-align: center;
 }
 p {
     color: gray;
-    text-align: center;
-}
-
-.pages {
     text-align: center;
 }
